fix product name on small screen

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -30,7 +30,7 @@ $font-family-roboto-regular: 'ROBOTO REGULAR' , sans-serif;
       margin: 0 1.2vw 3vh 0;
     }
     .thumb-footer-model a {
-      font-size: 1vw;
+      font-size: 1.2vw;
     }
   }
   @media only screen and (max-width: 890px) {
@@ -47,6 +47,9 @@ $font-family-roboto-regular: 'ROBOTO REGULAR' , sans-serif;
     .thumb-wrapper{
       width: 42vw;
       margin: 0 1.2vw 3vh 0;
+    }
+    .thumb-footer-model a {
+      font-size: 2vw;
     }
   }
 
